# ros-markergen

./: CMakeLists.txt  README.md  package.xml
generated_paths/: testpath1
scripts/: pathgen.py
src/: translator.cpp
